feat: hbs optimized

--- a/src/core/email/templates/verifyCode.hbs
+++ b/src/core/email/templates/verifyCode.hbs
@@ -10,6 +10,7 @@
       <h2>您的验证码</h2>
       <p>亲爱的 {{name}}: </p>
       <p>您的验证码是: <strong>{{verificationCode}}</strong></p>
+      <p>注意：验证码5分钟内有效！</p>
       <p>请使用验证码以验证您的邮箱地址</p>
       <p>如果您没有进行过注册操作，请忽略该邮件</p>
       <p>感谢！</p>
@@ -20,6 +21,7 @@
       <p>Your verification code is: <strong>{{verificationCode}}</strong></p>
       <p>Please use this code to verify your email address.</p>
       <p>If you have not registered, please ignore this email.</p>
+      <p>Note: The verification code is valid for 5 minutes!</p>
       <p>Thank you!</p>
     </div>
   </body>
